fix section about_us

--- a/landing/index.html
+++ b/landing/index.html
@@ -97,7 +97,7 @@
                 </div>
 
                 <!-- /.header button -->
-                <div class="head-btn wow fadeInUp" data-wow-delay="0.8s">
+                <div class="head-btn wow fadeInUp btn-hidden" data-wow-delay="0.8s">
                     <a href="#feature" class="btn-register"><span class="link-text">Free Author Registration</span>
                     <span class="link-icon">
                         <svg width="15px" height="15px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
